<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textViewMedHdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColor="@color/colorDarkGray"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:text="@string/medicine" />
    <View
        android:id="@+id/med_separator_line"
        android:layout_width="match_parent"
        android:layout_marginTop="18dp"
        android:layout_height="1dp"
        android:layout_below="@id/textViewMedHdr"
        android:background="@color/colorLightishGray"/>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_text_view"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:textColor="@color/colorPrimary"
    android:fontFamily="sans-serif-smallcaps"
        android:gravity="center_vertical|center_horizontal"
    android:layout_centerVertical="true"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp"
    android:textSize="30sp"
    android:text="@string/no_med" />
    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/toolbar"
        android:textSize="50sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:onClick="addMedicine"
        android:text="@string/add_med" />

    <!-- Horizontal line at toolbar border -->
    <View
        android:layout_above="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorLightishGray"
        android:id="@+id/view" />

</RelativeLayout>